# Revised-Fault-Injection-Project

./: README.md
fi-rig-final/: FI-Rig-Launch.py  README.txt  START HERE.bat  pyproject.toml
fi-rig-final/fi_host/: __init__.py  server.py
fi-rig-final/fi_host.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fi-rig-final/fi_host/analysis/: __init__.py  engine.py
fi-rig-final/fi_host/cli/: main.py
fi-rig-final/fi_host/core/: __init__.py  models.py
fi-rig-final/fi_host/transport/: __init__.py  serial_driver.py
fi-rig-final/firmware/: CMakeLists.txt  ReadMe  sdkconfig.defaults
fi-rig-final/firmware/main/: CMakeLists.txt  main.c
fi-rig-final/tests/: test_core.py
fi-rig-final/web/: index.html
fi-rig-final/web/assets/: index-CEcsRtrD.js  index-DFueYN8y.css
